--- a/src/Pages/Login/Register/Register.css
+++ b/src/Pages/Login/Register/Register.css
@@ -1,6 +1,7 @@
 .register-form{
     margin: 0 auto;
     width: 50%;
+    padding: 10px;
 }
 .register-form input:not([type=checkbox]){
     display: block;
@@ -12,4 +13,9 @@
     padding-left: 10px;
     font-size: 17px;
     margin-bottom: 15px;
+}
+@media screen and (max-width:770px) {
+    .register-form{
+        width: 100%;
+    }
 }
